# PassiveLAB

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-review.yml  claude.yml
benchmark/geometry/tcoil/: README.md  benchmark_generation_speed.py  benchmark_generation_speed_report.md  octagon_variant.py  preview.py
benchmark/geometry/tcoil/previews/: tcoil_octagon.gds  tcoil_rect.gds
config/: config.py
converter/: README.md  converter.py
docs/: AGENTS.md  ARCHITECTURE.md  CORE_ABSTRACTION_VALIDATION.md  CORE_INTERFACE_DESIGN.md  GENERATOR_BACKEND_RECOMMENDATION.md  GENERATOR_COMPARISON_MATRIX.md  NOTEBOOK_ARCHITECTURE_REPORT.md  NOTEBOOK_CELL_MAP.md  ROADMAP.md  TOOLS_AND_ARTIFACTS.md  VISION.md  github-automation-setup.md
docs/PRD/: 00 Master PRD.md  01 Phase Index & Roadmap.md  Phase 1 — TCoil Platformization.md  Phase 2 — MOMCap & HV Compliance.md
docs/adoption/: MLFLOW_ADOPTION_STUDY.md  OPENPCELLS_ADOPTION_STUDY.md
docs/assets/: notebook-workflow-diagram.drawio
reference/markdown/: TCoil_Dataset_Generator_and_Training.md
reference/python/: TCoil_Dataset_Generator_and_Training.py
src/passivelab/: __init__.py
src/passivelab/core/: GOAL.md  __init__.py  types.py
src/passivelab/core/benchmark/: GOAL.md  __init__.py  validation.py
src/passivelab/core/characterization/: GOAL.md  __init__.py  backend.py  dataset.py  surrogate.py
src/passivelab/core/geometry/: GOAL.md  __init__.py  generator.py  spec.py
src/passivelab/core/optimization/: GOAL.md  __init__.py  optimizer.py
src/passivelab/core/tests/: test_interfaces_shape.py  test_no_leakage.py
src/passivelab/geometry/: GOAL.md  __init__.py
src/passivelab/geometry/tcoil/: __init__.py  generator.py  plugin.py  rules.py  spec.py  templates.py
src/passivelab/geometry/tcoil/tests/: test_generator.py  test_plugin.py  test_rules.py
tests/: GOAL.md  test_archetypes.py  test_plugin_interop.py  test_smoke.py  test_tcoil_core_integration.py
